--- a/manifests/statefullset.yaml
+++ b/manifests/statefullset.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: web_test
+  name: dupa_test
 spec:
   selector:
     matchLabels:
